--- a/package.json
+++ b/package.json
@@ -18,6 +18,9 @@
   "author": "Adwin Ying <adwinying@gmail.com>",
   "license": "MIT",
   "devDependencies": {
+    "@istanbuljs/nyc-config-typescript": "^1.0.1",
+    "@types/mocha": "^8.2.3",
+    "@types/node": "^16.3.3",
     "@typescript-eslint/eslint-plugin": "^4.28.3",
     "@typescript-eslint/parser": "^4.28.3",
     "eslint": "^7.31.0",
@@ -25,7 +28,11 @@
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-import": "^2.23.4",
     "eslint-plugin-prettier": "^3.4.0",
+    "mocha": "^9.0.2",
+    "nyc": "^15.1.0",
     "prettier": "2.3.2",
+    "source-map-support": "^0.5.19",
+    "ts-node": "^10.1.0",
     "typescript": "^4.3.5"
   },
   "dependencies": {
