--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
   "scripts": {
     "lint": "eslint ./src/*.ts ./src/**/*.ts",
     "dev": "tsc -w",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha",
+    "test-watch": "mocha -w",
+    "coverage": "nyc npm run test"
   },
   "keywords": [
     "handlebars",
