--- a/package.json
+++ b/package.json
@@ -38,6 +38,8 @@
     "typescript": "^4.3.5"
   },
   "dependencies": {
+    "@types/lodash": "^4.14.172",
+    "lodash": "^4.17.21",
     "node-html-parser": "^4.1.0"
   },
   "repository": {
