--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -19,6 +19,7 @@
   ],
   "rules": {
     "no-param-reassign": "off",
-    "no-console": "off"
+    "no-console": "off",
+    "no-underscore-dangle": "off"
   }
 }
